[package]
name = "boogie"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An API for constructing and verifying Boogie programs.  See https://github.com/boogie-org/boogie for more on Boogie."
repository = "https://github.com/Whiley/WhileyBuildTool"
readme = "README.md"

[dependencies]
